<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndQuote</string>

    <string name="aboutactivity_title">About</string>
    <string name="aboutactivity_license">AndQuote is free/libre software as per the 3-clause BSD license.</string>
    <string name="aboutactivity_author">Written by: Valentin Lorentz</string>
    <string name="aboutactivity_translator">English translation by: Valentin Lorentz</string>
    <string name="aboutactivity_runningversion">You are running version %s</string>
    <string name="aboutactivity_latestversion">Latest version available online: %s</string>

    <string name="error_download_failed">Cannot access the API, or an error happened.</string>

    <string name="mainactivity_menu_settings">Settings</string>
    <string name="mainactivity_menu_about">About</string>
    <string name="preferences_api">API</string>
    <string name="preferences_api_url">API URL</string>
    <string name="preferences_api_url_summary">The base URL of the OpenQuoteApi. Do not edit this unless you know what you are doing.</string>
    <string name="preferences_home">Home screen</string>
    <string name="preferences_home_fetchimages">Display images</string>
    <string name="preferences_home_fetchimages_summary">Determines whether or not websites logo should be displayed on the home screen.</string>
    <string name="preferences_nav">Navigation</string>
    <string name="preferences_nav_quote_img_enable">Enabled for quotes with images</string>
    <string name="preferences_nav_quote_img_enable_summary">Determines whether or not navigation controls will be displayed for websites using images (such as xkcd).</string>
    <string name="preferences_nav_quote_enable">Enabled for quotes with no image</string>
    <string name="preferences_nav_quote_enable_summary">Determines whether or not navigation controls will be displayed for websites not using images.</string>

    <string name="siteactivity_loading_quotes">Loading the quotes. Please wait...</string>

    <string name="siteactivity_button_latest">Latest</string>
    <string name="siteactivity_button_top">Top</string>
    <string name="siteactivity_button_random">Random</string>
    <string name="siteactivity_text_page">page:</string>
    <string name="siteactivity_gotopage_dialog_title">Go to page</string>
    <string name="siteactivity_gotopage_button_go">Go</string>
    <string name="siteactivity_gotopage_button_cancel">Cancel</string>

    <string name="siteactivity_context_copy_content">Copy content to clipboard</string>
    <string name="siteactivity_context_copy_link">Copy link to clipboard</string>
    <string name="siteactivity_context_open_link">Open quote in browser</string>
    <string name="siteactivity_context_share">Share</string>
    <string name="siteactivity_context_moreinfo">More info</string>
    <string name="siteactivity_share_subject">Quote shared via AndQuote.</string>
    <string name="siteactivity_share_window_title">Share</string>

    <string name="quoteactivity_doesnotexist">This quote does not exist.</string>

</resources>
