<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:id="@+id/siteActivity"
  layout_width="match_parent"
  layout_height="match_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:id="@+id/navigation">
        <Button
                android:text="@string/siteactivity_button_latest"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLatest">
        </Button>
        <Button
                android:text="@string/siteactivity_button_top"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonTop">
        </Button>
        <Button
                android:text="@string/siteactivity_button_random"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRandom">
        </Button>
        <TextView
                android:text="@string/siteactivity_text_page"
                android:textSize="12dp"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </TextView>
        <Button
                android:text="&lt;="
                android:textSize="12dp"
                android:id="@+id/buttonPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </Button>
        <EditText
                android:textSize="12dp"
                android:id="@+id/gotopage"
                android:inputType="number"
                android:imeOptions="actionGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </EditText>
        <Button
                android:text="=&gt;"
                android:textSize="12dp"
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    <ListView
             android:id="@android:id/list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/navigation"
             android:layout_above="@+id/transport_selection"
             />
</RelativeLayout>

